# mlit_property_price_prediction

./: .env.example  .gitignore  README.md  pyproject.toml  requirements_definition.md
data/processed/: expo_event_dates.csv  konohana_segment_trend.csv  median_preds_by_year.csv  trend_compare_konohana_tsurumi_osakacity.csv
data/raw/: Osaka Prefecture_20151_20154.csv  Osaka Prefecture_20161_20164.csv  Osaka Prefecture_20201_20204.csv  Osaka Prefecture_20231_20234.csv  Osaka Prefecture_20251_20254.csv  station_distance.csv
data/raw/Osaka_Accommodation_2026/: ketsugo.csv
data/raw/Osaka_Events/: expo_event_time_series.csv  ir_event_time_series.csv
data/raw/Osaka_Pref/: Osaka Prefecture_20141_20144.csv  Osaka Prefecture_20171_20174.csv  Osaka Prefecture_20181_20184.csv  Osaka Prefecture_20191_20194.csv  Osaka Prefecture_20211_20214.csv  Osaka Prefecture_20221_20224.csv  Osaka Prefecture_20241_20244.csv
data/raw/Osaka_Pref_foreign_resident/: 2014_syuusei_gyousei-danjo_gaikokujin-setai.csv  2015_gyousei-danjo_gaikokujin-setai.csv  2016_gyousei-danjo_gaikokujin-setai.csv  2017_gyousei-danjo_gaikokujin-setai.csv  2018_gyousei-danjo_gaikokujiin-setai.csv  2019_gyosei-danjo-gaikokujin-setai.csv  2020_gyousei-danjo_gaikokujiin-setai.csv  (+5 more)
memos/: memo_1.md  project_summary.md
notebooks/: 01_eda.ipynb  02_modeling.ipynb
pipeline/etl/: make_silver_table.py  merge_df.py  osaka_accommodation_2026.py  osaka_foreign_resident.py  osaka_foreign_tourist.py  osaka_pref_to_bq.py  station_data_to_csv.py  to_bq.py
pipeline/features/: make_df3.py  make_event_flag.py  make_lag_features.py  make_station_distance_features.py
pipeline/sql/: make_osaka_foreign_residents.sql  make_osaka_foreign_tourist.sql  make_prep_data.sql  osaka_accommodation_2026.sql
tableau/: .~ブック1__7479.twbr  2025~2030年上昇率予測と投資選定条件の裏付け.twbx
(+11 files in other folders)
