[project]
name = "mlit-property-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.7.0",
    "google-cloud-bigquery>=3.42.1",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
