[project]
name = "mlit-property-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.4.0",
    "dash-cytoscape>=1.0.2",
    "db-dtypes>=1.7.0",
    "flask>=3.1.3",
    "gevent>=26.5.0",
    "google-cloud-bigquery>=3.42.1",
    "interpret-core>=0.7.8",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xlrd>=2.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
